--- a/_lectures/10_Week10.md
+++ b/_lectures/10_Week10.md
@@ -11,5 +11,6 @@ links:
 
 ---
 **Suggested Readings:**
-- Chapter 4.3~4.5 and 5.1
+- Chapter 4.3~4.5
 - [[chapter 5 summary slides (courtesy of professor Fu-Chuen Chang)]](/nsysu-calculus1/static_files/presentations/Chap05_Summary.pdf)
+- [[Recorded video]](https://www.youtube.com/playlist?list=PLHNZtBNWQ-87MJi1J-QLQmNDIy6-sPw_W)
