--- a/_lectures/12_week12.md
+++ b/_lectures/12_week12.md
@@ -12,3 +12,4 @@ links:
 - Chapter 5.3~5.6
 - [What's so special about Euler's number e?](https://www.3blue1brown.com/lessons/eulers-number)
 - [L'Hôpital's rule](https://www.3blue1brown.com/lessons/l-hopitals-rule)
+- [[Recorded video]](https://youtube.com/playlist?list=PLHNZtBNWQ-86FvDMuh1M1V-ZbPKlU8k5e&si=yOyvYLkuLz262_rq)
