--- a/_lectures/13_week13.md
+++ b/_lectures/13_week13.md
@@ -13,3 +13,4 @@ links:
 - Chapter 5.7~5.8, 7.1
 - [[chapter 7 summary slides (courtesy of professor Fu-Chuen Chang)]](/nsysu-calculus1/static_files/presentations/Chap07_Summary.pdf)
 - [The Inverse Trigonometric Functions](https://www.intmath.com/analytic-trigonometry/7-inverse-trigo-functions.php)
+- [[Recorded video]](https://www.youtube.com/playlist?list=PLHNZtBNWQ-87PKzELlYchc7stoSRNG1GO)
