--- a/_lectures/14_week14.md
+++ b/_lectures/14_week14.md
@@ -12,3 +12,4 @@ links:
 - Chapter 7.2~7.4
 - [Lateral surface area of frustum](https://mathalino.com/reviewer/derivation-of-formulas/derivation-of-formula-for-lateral-area-of-a-right-circular-cone)
 - [Why does the area require approximation by a cone?](https://math.stackexchange.com/questions/1232023/why-is-area-of-a-surface-of-revolution-integral-2-pi-yds-not-dx)
+- [[Recorded video]](https://www.youtube.com/playlist?list=PLHNZtBNWQ-84qv5N4O2nw5y3M-kCVLbEA)
